# PFM-Backend

./: README.md
PFM/: mydatabase  pyproject.toml
PFM/Auth/: models.py  serializers.py  urls.py  views.py
PFM/Auth/migrations/: 0001_initial.py  0002_alter_userinformation_email.py  0003_alter_userinformation_email.py  0004_userdetails_delete_userinformation.py  0005_userdetails_email.py
PFM/BudgetTracker/: models.py  serializers.py  tasks.py  urls.py  views.py
PFM/BudgetTracker/migrations/: 0001_initial.py  0002_savinggoal.py  0003_transaction.py
PFM/DailyExpenses/: apps.py  models.py  serializers.py  urls.py  views.py
PFM/DailyExpenses/migrations/: 0001_initial.py  0002_remove_dailyexpenses_id_dailyexpenses_expense_id_and_more.py  0003_remove_expensecategory_user_expensecategory_user.py  0004_alter_expensecategory_user.py
PFM/PFM/: celery.py  settings.py  urls.py
